[gd_scene load_steps=8 format=3 uid="uid://c4nki25ca04uk"]

[ext_resource type="Script" path="res://world/mash_world/mash_world.gd" id="1_2yp31"]
[ext_resource type="Texture2D" uid="uid://dpeeb1pj5nb8i" path="res://world/mash_world/fountain_background.JPG" id="2_k0c63"]
[ext_resource type="Texture2D" uid="uid://5q1rjive0658" path="res://world/mash_world/baby_face.PNG" id="3_ln1ve"]
[ext_resource type="Texture2D" uid="uid://cp6lok8553ebc" path="res://world/mash_world/baby_nose.PNG" id="4_x6xkc"]
[ext_resource type="Texture2D" uid="uid://dggjrdloltd5q" path="res://world/mash_world/frog_arm.png" id="5_pemab"]
[ext_resource type="AudioStream" uid="uid://wphjylk8na84" path="res://world/mash_world/mash_music.ogg" id="6_k83a5"]

[sub_resource type="LabelSettings" id="LabelSettings_ea6t7"]
font_size = 45
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="MashWorld" type="Node2D"]
script = ExtResource("1_2yp31")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1153.0
offset_bottom = 656.0
texture = ExtResource("2_k0c63")
expand_mode = 2

[node name="BabyFace" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 663.0
texture = ExtResource("3_ln1ve")
expand_mode = 2

[node name="BabyNose" type="Sprite2D" parent="."]
position = Vector2(520, 223)
scale = Vector2(0.85544, 0.79976)
texture = ExtResource("4_x6xkc")

[node name="RubLabel" type="Label" parent="."]
offset_left = 7.0
offset_top = 25.0
offset_right = 404.0
offset_bottom = 91.0
text = "Percent Rubbed: x"
label_settings = SubResource("LabelSettings_ea6t7")

[node name="FrogArm" type="Sprite2D" parent="."]
position = Vector2(625, 402)
texture = ExtResource("5_pemab")

[node name="LeaveSceneTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_k83a5")
autoplay = true

[node name="EndGameTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="LeaveSceneTimer" to="." method="_on_leave_scene_timer_timeout"]
[connection signal="timeout" from="EndGameTimer" to="." method="_on_end_game_timer_timeout"]
